force-app/main/default/objects/Operating_Account_Poc__c/Operating_Account_Poc__c.object-meta.xml
<CustomObject>
    <label>Operating Account Poc</label>
    <nameField>
        <displayFormat>POC-{0000}</displayFormat>
        <label>Operating Account Poc Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Operating_Account_poc</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>