force-app/main/default/objects/Operating_Account_Poc__c/fields/EMAIL_POC1__c.field-meta.xml
<CustomField>
    <fullName>EMAIL_POC1__c</fullName>
    <label>EMAIL POC1</label>
    <type>Email</type>
</CustomField>