force-app/main/default/objects/Operating_Account_Poc__c/fields/Operating_Account__c.field-meta.xml
<CustomField>
    <fullName>Operating_Account__c</fullName>
    <label>Operating_Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Operating_Account_pocs</relationshipLabel>
    <relationshipName>Operating_Account_pocs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>