force-app/main/default/objects/Operating_Account_Poc__c/fields/Phone_POC2__c.field-meta.xml
<CustomField>
    <fullName>Phone_POC2__c</fullName>
    <label>Phone POC2</label>
    <type>Phone</type>
</CustomField>