force-app/main/default/objects/Operating_Account_Poc__c/fields/POC_Team__c.field-meta.xml
<CustomField>
    <fullName>POC_Team__c</fullName>
    <label>POC_Team</label>
    <length>45</length>
    <type>Text</type>
</CustomField>