force-app/main/default/objects/Operating_Account_Poc__c/fields/Poc_Team_Member_Id__c.field-meta.xml
<CustomField>
    <fullName>Poc_Team_Member_Id__c</fullName>
    <label>Poc Team Member Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>