force-app/main/default/objects/Operating_Account_Poc__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <length>45</length>
    <type>Text</type>
</CustomField>